@@ -17,29 +17,16 @@ allprojects {
                 if (JavaVersion.current() >= JavaVersion.VERSION_1_9) {
                     inputs.property("moduleName", project.extra["moduleName"])
                     doFirst {
-                        classpath = files()
-
                         options.compilerArgs = listOf(
                                 // include Gradle dependencies as modules
-                                "--module-path", classpath.asPath,
-                                "--add-modules", "lombok"
+                                "--module-path", classpath.asPath
                         )
+                        classpath = files()
                     }
                 }
             }
         }
     }
-}
-
-dependencies {
-    implementation("org.projectlombok", "lombok", "1.18.8")
-    implementation("org.mapstruct", "mapstruct-processor", "1.3.0.Final")
-    annotationProcessor("org.projectlombok", "lombok", "1.18.8")
-    testCompile("junit", "junit", "4.12")
-}
-
-configure<JavaPluginConvention> {
-    sourceCompatibility = JavaVersion.VERSION_12
 }
 
 val moduleName by project.extra("pointsMirror")
